# phylokit

./: .bazelproject  .gitignore  .travis.yml  BUILD  README.md  WORKSPACE
phylokit/: BUILD  BitVector.cpp  BitVector.hpp  Clade.cpp  Clade.hpp  DistanceMatrix.cpp  DistanceMatrix.hpp  Quartet.cpp  Quartet.hpp  TaxonSet.cpp  TaxonSet.hpp  Tree.hpp  TreeClade.cpp  TreeClade.hpp  newick.cpp  newick.hpp
phylokit/Tests/: test.cpp
phylokit/pyext/: bindings.cxx
phylokit/util/: Logger.cpp  Logger.hpp  Options.cpp  Options.hpp  Timer.hpp
src/: BUILD  BitVector.cpp  BitVector.hpp  CMakeLists.txt  CMakeSettings.json  Clade.cpp  Clade.hpp  DistanceMatrix.cpp  DistanceMatrix.hpp  Quartet.cpp  Quartet.hpp  TaxonSet.cpp  TaxonSet.hpp  TreeClade.cpp  TreeClade.hpp  newick.cpp  newick.hpp
src/Tests/: test.cpp
src/pyext/: bindings.cxx
src/util/: BUILD  Logger.cpp  Logger.hpp  Options.cpp  Options.hpp  Timer.cpp
test/: BUILD  BitVectorTest.cpp  newickTest.cpp
